@@ -28,6 +28,7 @@ dependencies {
     testImplementation 'io.vertx:vertx-junit5:4.5.11'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:5.15.2'
 }
 
 test {
@@ -43,7 +44,9 @@ test {
             }
         }
     }
-    jvmArgs "-Djava.library.path=${System.getenv('TDLIB_PATH')}"
+    jvmArgs "-Djava.library.path=${System.getenv('TDLIB_PATH')}",
+            "-XX:+EnableDynamicAgentLoading",
+            "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
     environment "APP_ROOT", "${testClassesDirs.asPath}"
     useJUnitPlatform()
     finalizedBy jacocoTestReport
